pris de l'avance pour demain

--- a/style/styles.css
+++ b/style/styles.css
@@ -185,9 +185,9 @@ header a {
 }
 
 .hero {
-  background-image: url('https://imgur.com/AMKyNZ3.jpg'); 
+  background-image: url('https://imgur.com/Wb6yAnb.jpg'); 
   background-size: cover;
-  color: #ffffffc9;
+  color: #ffffff;
   padding: 4rem;
   text-align: center;
 }
